--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Print My Name</title>
 </head>
 <body>
-    <h1>Hello, titaya</h1>
-    <img src="https://cdn.pixabay.com/photo/2023/06/05/01/53/kitten-8041226_1280.jpg" alt="Descriptive Text"></body>
+    <h1>Hello, titaya eiei</h1>
+    <img src="https://stickershop.line-scdn.net/stickershop/v1/product/718/LINEStorePC/main.png?v=9" alt="Descriptive Text"></body>
 </body>
 </html>
