--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Print My Name</title>
 </head>
 <body>
-    <h1>Hello,<span style="background-color: pastel yellow;"> titaya sangwan</h1>
+    <h1>Hello,<span style="background-color: yellow;"> titaya sangwan</h1>
     <img src="https://stickershop.line-scdn.net/stickershop/v1/product/718/LINEStorePC/main.png?v=9" alt="Descriptive Text"></body>
     
 </body>
